--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <H6 align="center">以下是政府为不同人群设计的购房计划：</H6>
 <img src="home1.jpeg" height="700px" width="600px">
 	</img>	
+<H6 align="center">优先配屋计划</H6>		
 <img src="home2.jpeg" height="500px" width="700px">
 	</img>		
 <img src="home3.jpeg" height="500px" width="700px">
