--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <head>
+	<meta charset="UTF-8">
 <title>新加坡房屋政策</title>
 <div align="center">
 	<h1>著有“居者有其屋”之称的新加坡是如何让各个群体拥有房子？<h1>
