--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<H6 align="center">新加坡是个多元种族的国家，其中华人占七成以上。基于移民社会的特性、殖民统治的历史和地理位置的影响，使得新加坡社会文化更加多元化。截止2021年6月，新加坡总人口545.35万，公民349.82万，永久居民48.9万，非居民146.67万。在大流行疾病的影响下让更多人检视了自己对生活需求，相较于2020年的人口比例，新加坡总人口减少了4.1%，这当中主要是非居民流失。</H6> 
+ <div class="mbr-text col-12 mbr-fonts-style display-7 col-md-10"><p>新加坡是个多元种族的国家，其中华人占七成以上。基于移民社会的特性、殖民统治的历史和地理位置的影响，使得新加坡社会文化更加多元化。截止2021年6月，新加坡总人口545.35万，公民349.82万，永久居民48.9万，非居民146.67万。在大流行疾病的影响下让更多人检视了自己对生活需求，相较于2020年的人口比例，新加坡总人口减少了4.1%，这当中主要是非居民流失。</p> 
 	<div class="flourish-embed flourish-chart" data-src="visualisation/10201523"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 <H6 align="center">透过30年人口统计图，新加坡1991年总人口313.51万上升至2021年总人口545.35万,增加了1.31%。</H6> 
 	<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9833737"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
