--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 <H6 align="center">以下是政府为不同人群设计的购房计划：</H6>
 <img src="home1.jpeg" height="700px" width="600px">
 	</img>	
-<H6 align="center">优优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。</H6>		
-<H6 align="center">优优先配屋计划</H6>
+<p class="mbr-text align-center mbr-black mbr-fonts-style display-7">优优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。 
+<br>优先配屋计划</p>
+		
+ <H6 align="center">优优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。</H6>		
+<H6 align="center">优先配屋计划</H6>
 <img src="home2.jpeg" height="500px" width="700px">
 	</img>		
 <img src="home3.jpeg" height="500px" width="700px">
