--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <p class="mbr-text align-center mbr-black mbr-fonts-style display-7">优优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。 
 <br>优先配屋计划</p>
 		
- <H6 align="center">优优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。</H6>		
-<H6 align="center">优先配屋计划</H6>
+ <H6 class="mbr-text align-center mbr-black mbr-fonts-style display-6">优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。 
+<br>优先配屋计划</H6>
 <img src="home2.jpeg" height="500px" width="700px">
 	</img>		
 <img src="home3.jpeg" height="500px" width="700px">
