--- a/index.html
+++ b/index.html
@@ -15,15 +15,13 @@
 	<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/10201166"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
 <H6 align="center">截止2021年，淡宾尼(Tampines)是本地最多住宅单位的城镇，该区总住宅单位达7万5342个单位。其次是裕廊西 (Jurong West) , 该区总住宅单位达7万5206个单位，和淡宾尼仅差136个单位。</H6>
 
-<H6 align="center">新加坡住宅单位的城镇统计图</H6>
-<iframe width="900" height="600" src="https://www.youtube.com/embed/4R36R82NUcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+ <H6 class="mbr-text align-center mbr-black mbr-fonts-style display-6">新加坡住宅单位的城镇统计图
+<br><iframe width="900" height="600" src="https://www.youtube.com/embed/4R36R82NUcY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></H6>
 
-<H6 align="center">新加坡是世界上拥屋率最高的国家之一，超过90%的人都有自己的房子，相当于5个人中的4个人都能拥有自己的温馨小屋。在这个人口不断上升的小岛，新加坡针对不同群体的补助金和购房计划让公民和永久居民都能更容易购房，公民有两次的机会享有政府的福利与补贴申请预购组屋或剩余组屋；永久居民需和公民结婚才能一同申请预购组屋或剩余组屋。欲买房者应先了解自身的条件是否具备购买预购组屋或剩余组屋的资格、住房贷款选项、组屋预算。</H6> 
-<H6 align="center">以下是政府为不同人群设计的购房计划：</H6>
+ <H6 class="mbr-text align-center mbr-black mbr-fonts-style display-6">新加坡是世界上拥屋率最高的国家之一，超过90%的人都有自己的房子，相当于5个人中的4个人都能拥有自己的温馨小屋。在这个人口不断上升的小岛，新加坡针对不同群体的补助金和购房计划让公民和永久居民都能更容易购房，公民有两次的机会享有政府的福利与补贴申请预购组屋或剩余组屋；永久居民需和公民结婚才能一同申请预购组屋或剩余组屋。欲买房者应先了解自身的条件是否具备购买预购组屋或剩余组屋的资格、住房贷款选项、组屋预算。</H6> 
+<br>以下是政府为不同人群设计的购房计划：</H6>
 <img src="home1.jpeg" height="700px" width="600px">
 	</img>	
-<p class="mbr-text align-center mbr-black mbr-fonts-style display-7">优优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。 
-<br>优先配屋计划</p>
 		
  <H6 class="mbr-text align-center mbr-black mbr-fonts-style display-6">优先配屋计划可提高申请者在计算机投票中的机会。 最多可以申请 2 个优先计划。 为促进婚姻和为人父母，符合生育优先计划 (PPS) 的申请人可以申请其他优先计划，例如已婚儿童优先计划 (MCPS) 或第三子女优先计划 (TCPS)。 
 <br>优先配屋计划</H6>
