--- a/page2.html
+++ b/page2.html
@@ -532,7 +532,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-5">
-                    © Copyright SHJ - All Rights Reserved<br><a href="page3.html#top" class="text-primary" target="_blank">参考资料</a></p>
+                    © Copyright 2022 SHJ - All Rights Reserved<br><a href="page3.html#top" class="text-primary" target="_blank">参考资料</a></p>
             </div>
         </div>
     </div>
