--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             <div class="title col-md-12 col-lg-10">
                 
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
-                    透过30年人口统计图，新加坡1991年总人口313.51万上升至2021年总人口545.35万,增加了1.73%。
+                    透过30年人口统计图，新加坡1991年总人口313.51万上升至2021年总人口545.35万。
 			<div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/9833737"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
                 </h4>
                 
