--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
             <script src="https://cdn.onemap.sg/leaflet/onemap-leaflet.js"></script>
           </head>
           <body>
-            <h1>Singapore Map</h1>
-            <div id='mapdiv' style='height:800px;'></div>
+            
+            <div id='mapdiv' style='height:800px;'width="1280"  ></div>
           </body>
         <script>
           var center = L.bounds([1.56073, 104.11475], [1.16, 103.502]).getCenter();
