--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           </head>
           <body>
             
-            <div id='mapdiv' width="1280" height="720"></div>
+            <div id='mapdiv' style="position:center;height:700;width:900;></div>
           </body>
         <script>
           var center = L.bounds([1.56073, 104.11475], [1.16, 103.502]).getCenter();
