--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         
           <body>
             
-            <div id='mapdiv' style='width:700'></div>
+            <div id='mapdiv' style='width:75%;'></div>
           </body>
         <script>
           var center = L.bounds([1.56073, 104.11475], [1.16, 103.502]).getCenter();
