--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
              <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.3/leaflet.css" />
             <script src="https://cdn.onemap.sg/leaflet/onemap-leaflet.js"></script>
 
-              <div id='mapdiv' style='width:700px;'></div>
+              <div id='mapdiv' style='height:700px;'></div>
         <script>
           var center = L.bounds([1.56073, 104.11475], [1.16, 103.502]).getCenter();
           var map = L.map('mapdiv').setView([center.x, center.y], 12);
