--- a/index.html
+++ b/index.html
@@ -114,7 +114,8 @@
         </div>
     </div>
 </section>
-    
+     <div class="container">
+        <div class="row justify-content-center">
    
   
              <title>OneMap2 XYZ (Default)</title>
