--- a/index.html
+++ b/index.html
@@ -114,8 +114,14 @@
         </div>
     </div>
 </section>
-     <div class="container">
-        <div class="row justify-content-center">
+  
+    <div class="container">
+        <div class="mbr-section-head">
+            
+            
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-md-10 video-block">
    
   
              <title>OneMap2 XYZ (Default)</title>
