--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
     <div class="container">
         <div class="mbr-section-head">
             
-            
+      </div>    
         </div>
-        <div class="row justify-content-center mt-4">
-            <div class="col-12 col-md-10 video-block">
+      <div class="row justify-content-center mt-4"></div>
+      <div class="col-12 col-md-10 video-block"></div>
    
   
              <title>OneMap2 XYZ (Default)</title>
