--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@
     </div>
 </section>
   
+  <section>
     <div class="container">
         <div class="mbr-section-head">
             
-      </div>    
-        </div>
-      <div class="row justify-content-center mt-4"></div>
-      <div class="col-12 col-md-10 video-block"></div>
+     
+      <div class="row justify-content-center mt-4">
+      <div class="col-12 col-md-10 video-block">
    
   
              <title>OneMap2 XYZ (Default)</title>
@@ -158,6 +158,9 @@
             .openOn(map);         
           }
         </script>
+             </div>
+          </div>
+      </div>
     </div>
 </section>
 
