--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">
                     新加坡约有31％的居民居住在四房式组屋，23％的居民居住在五房式组屋和行政组屋。<br><br>
                 <div><br></div></h4>
-                
+                <div class="flourish-embed flourish-bar-chart-race" data-src="visualisation/10201166"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
             </div>
         </div>
     </div>
