--- a/page2.html
+++ b/page2.html
@@ -109,7 +109,7 @@
     
     <div class="container">
         
-        <div class="row mt-4">
+        <div class="row mt-4" style=width:40%>
             <div class="col-12 col-md-6 video-block">
                 <div class="video-wrapper"><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/hF9P6vJbdkA?rel=0&amp;amp;mute=1&amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
                 <p class="mbr-text pt-2 mbr-fonts-style display-5">
