--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-7">
                     <strong>转售组屋</strong></h3>
                 <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-5">转售组屋价格指数可用于比较组屋转售单位的整体价格变动。 整体组屋转售价持续攀升，2022年第一季的组屋转售价格指数创新高，达159.5，比上一季的155.7，转售价环比上涨2.4%。不过今年首季只有6934个组屋单位转手，比前一季的7940宗减少了12.7%，这是组屋转售量首次跌破近两年来的7000宗，也是冠病疫情暴发以来的新低。</h4>
-                
+                <div class="flourish-embed flourish-chart" data-src="visualisation/10400748"><script src="https://public.flourish.studio/resources/embed.js"></script></div>
             </div>
         </div>
     </div>
